# IMN_Lab

./: .gitignore  CMakeLists.txt
Lab1/: CMakeLists.txt  plot.sh
Lab1/src/: gnuplot.sh  main.cpp
Lab2/: plot.sh
Lab2/src/: main.cpp
Lab3/: plot.sh
Lab3/src/: main.cpp
Lab4/: plot.sh
Lab4/src/: main.cpp
Lab5/: plot.sh
Lab5/src/: main.cpp
Lab6/: plot.sh
Lab6/include/: mgmres.h
Lab6/src/: main.cpp  mgmres.c  mgmres.cpp
Lab7/: plot.sh
Lab7/src/: main.cpp
Lab8/: CMakeLists.txt  plot.sh
Lab8/src/: main.cpp
utils/include/: fileUtils.h  vectorUtils.h
utils/src/: fileUtils.cpp  vectorUtils.cpp
