cmake_minimum_required(VERSION 3.1.0)
project(imn)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall")

#PARENT DIRECTORY
get_filename_component(PARENT_DIR ${PROJECT_SOURCE_DIR} DIRECTORY)

#UTILS HEADERS INCLUDE
set(INCLUDES_UTILS ${PARENT_DIR}/utils/include)
include_directories(${INCLUDES_UTILS})
# message(STATUS ${INCLUDES_UTILS})

#MAIN PROJ HEADERS INCLUDE
set(INCLUDES ${PROJECT_SOURCE_DIR}/include)
include_directories(${INCLUDES})
# message(STATUS ${INCLUDES})


#UTILS EXECUTABLES INCLUDE
file(GLOB INCLUDES_UTILS_SOURCES "${PARENT_DIR}/utils/src/*.cpp")
# message(STATUS ${INCLUDES_UTILS_SOURCES})

#MAIN EXECUTABLES INCLUDE
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")

add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES_UTILS_SOURCES} ${INCLUDES_UTILS})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)